Configuraciones para que pase las pruebas de usuarios. Se establece idioma a es

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ tmp/*
 /coverage/
 /db/*.javadb/
 /db/*.sqlite3-journal
+/db/schema.rb
+/app/assets/stylesheets/scaffolds.css.scss
 /doc/api/
 /doc/app/
 /doc/features.html
